fixed footer bc and header alignment and color

--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ html {
 
   /* navigation */
 
-  nav {
+  .nav {
     background-color: #eff2f7;
     height: 100px;
     padding: 0px 24px;
