--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,12 @@
  /* footer */
 
- footer {
+ .footer {
     background-color: #eff2f7;
     position: relative;
   }
   
   .footer__container {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
