--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,4 +1,4 @@
-nav {
+.nav {
     background-color: #eff2f7;
     height: 100px;
     padding: 0px 24px;
